api implemented to show previous date metrics, needs serious refactoring

--- a/src/App.css
+++ b/src/App.css
@@ -45,3 +45,9 @@
   padding: 50px;
   background-color: #e8e8e8;
 }
+
+.weather-data{
+  margin: 50px;
+  padding: 50px;
+  background-color: #e8e8e8;
+}
