--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,16 @@ h4, h5, h6 {
   font-family: var(--md-sys-typescale-title-font);
 }
 
+.image-tile {
+  max-width: 100%; /* Image will resize to fit its container */
+  max-height: 100%; /* Image will resize to fit its container */
+  display: inline-block; /* Ensure images are displayed horizontally */
+  box-sizing: border-box;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  flex: 1;
+}
+
 .container {
   text-align: center;
   background-color: #f7f9fc;
@@ -45,7 +55,7 @@ h4, h5, h6 {
 }
 
 .navbar {
-  position: absolute;
+  position: fixed;
   top: 0; 
   width: 100%;
   background-color: #16213e; 
@@ -108,4 +118,25 @@ h4, h5, h6 {
   border-bottom: 1px solid #e0e0e0;
   box-sizing: border-box;
   padding: 10px;
+}
+
+.img {
+  display: block;
+  max-width: 100%;
+  height: auto; 
+  margin-bottom: 20px; 
+}
+
+
+#plotSelect {
+  background-color: #badbff;
+  border: none; 
+  border-radius: 8px;
+  padding: 10px;
+  margin: 10px;
+  
+  outline: none; 
+  cursor: pointer;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
+  color: #333; 
 }
