--- a/src/App.css
+++ b/src/App.css
@@ -146,13 +146,13 @@ h4, h5, h6 {
   flex-wrap: wrap;
   justify-content: center;
   gap: 10px; 
-  max-width: 40%;
+  max-width: 60%;
   margin: auto;
 }
 
 .image-tile {
-  
-  max-width: 30%; 
+  flex: 1;
+  max-width: 90%; 
   height: auto;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
@@ -161,12 +161,12 @@ h4, h5, h6 {
 }
 
 
-#station1 {
-  max-width: 100%;
+#station1, #station2 {
+  max-width: 40%;
 }
 
-#station2, #station3 {
-  max-width: 45%; 
+#station3 {
+  max-width: 17%; 
 }
 
 
